# AURA

./: GETTING_STARTED.md  README.md
backend/: __init__.py  clustering.py  detailed_summary.py  main.py  mcp.py  pyproject.toml  requirements.txt  simple_summary.py
backend/prompts/: __init__.py  summary.py
backend/src/: abstract_search.py  clustering.py  detailed_summary.py  keywords.py  server.py
backend/yaak/: yaak.rq_R2W4vCKYPf.yaml  yaak.rq_aWqjwQW5oe.yaml  yaak.wk_6Sp3rgjF45.yaml
frontend/: next.config.ts  package.json  unocss.config.js
notebooks/: AINE_AURA_Summarization.ipynb  clustering_abstracts.ipynb  keyword_extractor.ipynb
