[project]
name = "aura"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "gensim>=4.3.3",
    "google-generativeai>=0.8.5",
    "keybert>=0.9.0",
    "pydantic>=2.11.4",
    "mcp[cli]>=1.8.0",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
    "spacy>=3.8.5",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]
