[project]
name = "aura"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "gensim>=4.3.3",
    "google-generativeai>=0.8.5",
    "keybert>=0.9.0",
    "pydantic>=2.11.4",
    "mcp[cli]>=1.8.0",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
    "spacy>=3.8.2",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "en-core-web-lg",
    "fastmcp>=2.3.3",
    "pandas>=2.2.3",
    "setuptools>=80.4.0",
    "plotly>=6.0.1",
]

[tool.uv.sources]
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[project.scripts]
aura = "src.server:main"
